@@ -1,7 +1,7 @@
 package io.github.jdubois.bootui.engine.memory;
 
 import io.github.jdubois.bootui.core.dto.MemoryCalculationDto;
-import java.util.Locale;
+import java.math.BigDecimal;
 
 /**
  * Paketo {@code libjvm}-style JVM memory calculator.
@@ -13,8 +13,8 @@ import java.util.Locale;
  * </pre>
  *
  * <p>The formula and the default region sizes mirror
- * {@code paketo-buildpacks/libjvm/calc/calculator.go}. We deviate from the
- * buildpack on two points because BootUI has access to a live JVM:
+ * {@code paketo-buildpacks/libjvm/calc/calculator.go}. We adapt the
+ * buildpack model where BootUI has live JVM observations:
  *
  * <ul>
  *   <li><b>Loaded class count</b> comes from
@@ -24,10 +24,14 @@ import java.util.Locale;
  *       not applied. We do apply a {@link #META_SAFETY_FACTOR} on top of the
  *       observed count to account for lazy class loading after the user
  *       opens the panel.</li>
- *   <li><b>Default thread count</b> is {@code max(liveThreads, 250)} for
- *       platform threads and {@code max(liveThreads, 80)} when Spring
- *       virtual threads are enabled, so a freshly-started small app doesn't
- *       under-reserve stack memory.</li>
+ *   <li><b>Direct memory</b> keeps libjvm's 10 MiB fallback, but is raised to
+ *       at least the currently observed direct-buffer usage. The generated
+ *       options deliberately do not hard-cap direct memory because a live
+ *       snapshot cannot predict future Netty/NIO demand.</li>
+ *   <li><b>Default thread count</b> is {@code max(liveThreads, 250)}. Virtual
+ *       threads do not reduce this platform-thread reserve or {@code -Xss}:
+ *       their stacks are heap-backed, while carrier and helper platform
+ *       threads still use native stacks.</li>
  * </ul>
  *
  * <p>This class is pure (no Spring, no JMX); the controller resolves all
@@ -35,27 +39,23 @@ import java.util.Locale;
  */
 final class MemoryCalculator {
 
+    private static final long MEBIBYTE = 1024L * 1024L;
+
     /**
-     * libjvm: {@code DefaultDirectMemory = 10 * Mebi}.
+     * libjvm: {@code DefaultDirectMemory = 10 * Mebi}. This is a modeling
+     * fallback, not a universally safe hard cap.
      */
-    static final long DIRECT_MEMORY_BYTES = 10L * 1024 * 1024;
+    static final long DIRECT_MEMORY_BYTES = 10L * MEBIBYTE;
 
     /**
      * libjvm: {@code DefaultReservedCodeCache = 240 * Mebi}.
      */
-    static final long CODE_CACHE_BYTES = 240L * 1024 * 1024;
+    static final long CODE_CACHE_BYTES = 240L * MEBIBYTE;
 
     /**
      * libjvm: {@code DefaultStack = 1 * Mebi}.
      */
-    static final long STACK_BYTES_PER_THREAD = 1L * 1024 * 1024;
-
-    /**
-     * Smaller platform-thread stacks for virtual-thread deployments. The JVM
-     * still needs carrier/platform thread stacks, but the request-concurrency
-     * model no longer reserves one native stack per request.
-     */
-    static final long VIRTUAL_THREAD_STACK_BYTES_PER_THREAD = 512L * 1024;
+    static final long STACK_BYTES_PER_THREAD = MEBIBYTE;
 
     /**
      * libjvm: {@code ClassOverhead = 14_000_000} (decimal MB, not MiB).
@@ -69,9 +69,9 @@ final class MemoryCalculator {
 
     /**
      * Safety factor on observed loaded-class count, used to size metaspace.
-     * The live count is a snapshot; Spring lazily loads many classes
-     * (devtools, JDBC drivers, error paths, JSON serializers …) after the
-     * panel is first opened. 1.25× gives a forgiving but not wasteful cap.
+     * The live count is a snapshot and applications can load more classes
+     * after the panel opens. This is an explicit BootUI heuristic, not a JVM
+     * ergonomic guarantee.
      */
     static final double META_SAFETY_FACTOR = 1.25;
 
@@ -80,44 +80,23 @@ final class MemoryCalculator {
      */
     static final int DEFAULT_THREAD_COUNT_FLOOR = 250;
 
-    /**
-     * Conservative carrier/platform-thread floor when Spring virtual threads are
-     * enabled. It leaves room for Tomcat acceptors, GC/JIT/helper threads,
-     * scheduler/database workers, and carrier threads without assuming a
-     * 200-thread servlet request pool.
-     */
-    static final int VIRTUAL_THREAD_COUNT_FLOOR = 80;
-
     static final int MIN_THREAD_COUNT = 1;
     static final int MAX_THREAD_COUNT = 10_000;
     static final int MIN_HEAD_ROOM_PERCENT = 0;
-    static final int MAX_HEAD_ROOM_PERCENT = 90;
-    static final long MIN_TOTAL_MEMORY_BYTES = 128L * 1024 * 1024;
-    static final long MAX_TOTAL_MEMORY_BYTES = 64L * 1024 * 1024 * 1024;
-
-    private static final long GC_FLIP_HEAP_BYTES = 4L * 1024 * 1024 * 1024;
-
-    private final JdkVersion jdkVersion;
-
-    MemoryCalculator() {
-        this(JdkVersion.current());
-    }
-
-    MemoryCalculator(JdkVersion jdkVersion) {
-        this.jdkVersion = jdkVersion;
-    }
+    static final int MAX_HEAD_ROOM_PERCENT = 30;
+    static final long MIN_TOTAL_MEMORY_BYTES = 128L * MEBIBYTE;
+    static final long MAX_TOTAL_MEMORY_BYTES = 64L * 1024 * MEBIBYTE;
 
     static int defaultThreadCount(int liveThreadCount) {
-        return defaultThreadCount(liveThreadCount, false);
+        return Math.max(liveThreadCount, DEFAULT_THREAD_COUNT_FLOOR);
     }
 
-    static int defaultThreadCount(int liveThreadCount, boolean virtualThreadsEnabled) {
-        int floor = virtualThreadsEnabled ? VIRTUAL_THREAD_COUNT_FLOOR : DEFAULT_THREAD_COUNT_FLOOR;
-        return Math.max(liveThreadCount, floor);
+    private static long bytesToMiBFloor(long bytes) {
+        return Math.max(0, bytes / MEBIBYTE);
     }
 
-    private static long bytesToMb(long bytes) {
-        return Math.max(0, Math.round(bytes / (1024.0 * 1024.0)));
+    private static long bytesToMiBCeil(long bytes) {
+        return Math.max(0, (bytes + MEBIBYTE - 1) / MEBIBYTE);
     }
 
     private static long roundUpTo(long value, long multiple) {
@@ -188,6 +167,28 @@ final class MemoryCalculator {
             int liveLoadedClassCount,
             boolean virtualThreadsEnabled,
             String virtualThreadsProperty) {
+        return calculate(
+                totalMemoryBytes,
+                threadCount,
+                loadedClasses,
+                headRoomPercent,
+                liveThreadCount,
+                liveLoadedClassCount,
+                virtualThreadsEnabled,
+                virtualThreadsProperty,
+                0);
+    }
+
+    MemoryCalculationDto calculate(
+            long totalMemoryBytes,
+            int threadCount,
+            int loadedClasses,
+            int headRoomPercent,
+            int liveThreadCount,
+            int liveLoadedClassCount,
+            boolean virtualThreadsEnabled,
+            String virtualThreadsProperty,
+            long observedDirectMemoryBytes) {
 
         long clampedTotal = clamp(totalMemoryBytes, MIN_TOTAL_MEMORY_BYTES, MAX_TOTAL_MEMORY_BYTES);
         int clampedThreads = (int) clamp(threadCount, MIN_THREAD_COUNT, MAX_THREAD_COUNT);
@@ -195,23 +196,25 @@ final class MemoryCalculator {
         int clampedClasses = Math.max(loadedClasses, 0);
 
         long metaspaceBytes = computeMetaspaceBytes(clampedClasses);
-        long stackBytesPerThread = stackBytesPerThread(virtualThreadsEnabled);
+        long directMemoryBytes = computeDirectMemoryBytes(observedDirectMemoryBytes);
+        long stackBytesPerThread = STACK_BYTES_PER_THREAD;
         long stackBytesTotal = stackBytesPerThread * (long) clampedThreads;
-        long fixedRegionsBytes = DIRECT_MEMORY_BYTES + metaspaceBytes + CODE_CACHE_BYTES + stackBytesTotal;
+        long fixedRegionsBytes = directMemoryBytes + metaspaceBytes + CODE_CACHE_BYTES + stackBytesTotal;
         long headRoomBytes = (long) ((clampedHeadRoom / 100.0) * clampedTotal);
         long heapBytes = clampedTotal - headRoomBytes - fixedRegionsBytes;
 
-        if (heapBytes <= 0) {
+        if (heapBytes < MEBIBYTE) {
             String message = String.format(
-                    "No room for heap: fixed regions (%d MB) + headroom (%d MB) >= total (%d MB). "
+                    "No room for a renderable heap: fixed regions (%d MiB) + headroom (%d MiB) "
+                            + "leave less than 1 MiB from the %d MiB total. "
                             + "Try a larger total memory, fewer threads, or lower headroom.",
-                    bytesToMb(fixedRegionsBytes), bytesToMb(headRoomBytes), bytesToMb(clampedTotal));
+                    bytesToMiBCeil(fixedRegionsBytes), bytesToMiBCeil(headRoomBytes), bytesToMiBCeil(clampedTotal));
             return new MemoryCalculationDto(
                     clampedTotal,
                     0,
                     metaspaceBytes,
                     CODE_CACHE_BYTES,
-                    DIRECT_MEMORY_BYTES,
+                    directMemoryBytes,
                     stackBytesPerThread,
                     stackBytesTotal,
                     headRoomBytes,
@@ -228,15 +231,14 @@ final class MemoryCalculator {
                     message);
         }
 
-        String jvmOptions =
-                buildJvmOptions(heapBytes, metaspaceBytes, CODE_CACHE_BYTES, DIRECT_MEMORY_BYTES, stackBytesPerThread);
+        String jvmOptions = buildJvmOptions(heapBytes, metaspaceBytes, CODE_CACHE_BYTES, stackBytesPerThread);
 
         return new MemoryCalculationDto(
                 clampedTotal,
                 heapBytes,
                 metaspaceBytes,
                 CODE_CACHE_BYTES,
-                DIRECT_MEMORY_BYTES,
+                directMemoryBytes,
                 stackBytesPerThread,
                 stackBytesTotal,
                 headRoomBytes,
@@ -256,44 +258,38 @@ final class MemoryCalculator {
     /**
      * Pick a sensible default {@code totalMemoryBytes} that is independent of
      * the host machine's RAM. We size to roughly 1.5× the app's observed
-     * footprint, with a floor sized to fit all fixed regions plus 128 MB of
+     * footprint, with a floor sized to fit all fixed regions plus 128 MiB of
      * heap, and a hard upper clamp of 2 GiB so a 32 GB Mac doesn't poison
      * the recommendation. The user can move the value freely afterwards.
      */
     long defaultTotalMemoryBytes(
             long heapCommittedBytes, long nonHeapCommittedBytes, int threadCount, int loadedClasses) {
-        return defaultTotalMemoryBytes(heapCommittedBytes, nonHeapCommittedBytes, threadCount, loadedClasses, false);
-    }
-
-    long defaultTotalMemoryBytes(
-            long heapCommittedBytes,
-            long nonHeapCommittedBytes,
-            int threadCount,
-            int loadedClasses,
-            boolean virtualThreadsEnabled) {
-
-        int safeThreads =
-                Math.max(threadCount, virtualThreadsEnabled ? VIRTUAL_THREAD_COUNT_FLOOR : DEFAULT_THREAD_COUNT_FLOOR);
+        int safeThreads = Math.max(threadCount, DEFAULT_THREAD_COUNT_FLOOR);
         long fixed = DIRECT_MEMORY_BYTES
                 + computeMetaspaceBytes(loadedClasses)
                 + CODE_CACHE_BYTES
-                + stackBytesPerThread(virtualThreadsEnabled) * (long) safeThreads;
-        long floor = fixed + 128L * 1024 * 1024;
+                + STACK_BYTES_PER_THREAD * (long) safeThreads;
+        long floor = fixed + 128L * MEBIBYTE;
 
         long useful = heapCommittedBytes + Math.max(0, nonHeapCommittedBytes);
         useful = useful + (useful / 2); // ×1.5 footprint
 
         long picked = Math.max(floor, useful);
-        picked = roundUpTo(picked, 64L * 1024 * 1024);
+        picked = roundUpTo(picked, 64L * MEBIBYTE);
 
-        long min = 384L * 1024 * 1024;
-        long max = 2048L * 1024 * 1024;
+        long min = 384L * MEBIBYTE;
+        long max = 2048L * MEBIBYTE;
         return clamp(picked, min, max);
     }
 
     private long computeMetaspaceBytes(int loadedClasses) {
         double withFactor = (META_BASE_BYTES + META_PER_CLASS_BYTES * (double) loadedClasses) * META_SAFETY_FACTOR;
-        return (long) Math.ceil(withFactor);
+        return roundUpTo((long) Math.ceil(withFactor), MEBIBYTE);
+    }
+
+    private static long computeDirectMemoryBytes(long observedDirectMemoryBytes) {
+        long boundedObserved = clamp(observedDirectMemoryBytes, 0, MAX_TOTAL_MEMORY_BYTES);
+        return Math.max(DIRECT_MEMORY_BYTES, roundUpTo(boundedObserved, MEBIBYTE));
     }
 
     String buildKubernetesJvmOptions(
@@ -303,98 +299,36 @@ final class MemoryCalculator {
         }
 
         StringBuilder sb = new StringBuilder(256);
-        sb.append("-XX:+UseContainerSupport");
-        sb.append(" -XX:MaxRAMPercentage=").append(formatPercentage(maxRamPercentage));
+        sb.append("-XX:MaxRAMPercentage=").append(formatPercentage(maxRamPercentage));
+        sb.append(" -XX:MinRAMPercentage=").append(formatPercentage(maxRamPercentage));
         sb.append(" -XX:InitialRAMPercentage=").append(formatPercentage(initialRamPercentage));
         sb.append(" -XX:MaxMetaspaceSize=")
-                .append(bytesToMb(calculation.metaspaceBytes()))
+                .append(bytesToMiBCeil(calculation.metaspaceBytes()))
                 .append("m");
         sb.append(" -XX:ReservedCodeCacheSize=")
-                .append(bytesToMb(calculation.codeCacheBytes()))
-                .append("m");
-        sb.append(" -XX:MaxDirectMemorySize=")
-                .append(bytesToMb(calculation.directMemoryBytes()))
+                .append(bytesToMiBCeil(calculation.codeCacheBytes()))
                 .append("m");
         sb.append(" -Xss").append(calculation.stackBytesPerThread() / 1024).append("k");
-        appendCommonOptions(sb, calculation.heapBytes());
         return sb.toString();
     }
 
-    private static long stackBytesPerThread(boolean virtualThreadsEnabled) {
-        return virtualThreadsEnabled ? VIRTUAL_THREAD_STACK_BYTES_PER_THREAD : STACK_BYTES_PER_THREAD;
-    }
-
     private static String formatPercentage(double percentage) {
-        return String.format(Locale.ROOT, "%.1f", percentage);
+        return BigDecimal.valueOf(percentage).stripTrailingZeros().toPlainString();
     }
 
-    private String buildJvmOptions(
-            long heapBytes,
-            long metaspaceBytes,
-            long codeCacheBytes,
-            long directMemoryBytes,
-            long stackBytesPerThread) {
+    private String buildJvmOptions(long heapBytes, long metaspaceBytes, long codeCacheBytes, long stackBytesPerThread) {
 
-        long heapMb = bytesToMb(heapBytes);
-        long metaMb = bytesToMb(metaspaceBytes);
-        long ccMb = bytesToMb(codeCacheBytes);
-        long dmMb = bytesToMb(directMemoryBytes);
+        long heapMb = bytesToMiBFloor(heapBytes);
+        long metaMb = bytesToMiBCeil(metaspaceBytes);
+        long ccMb = bytesToMiBCeil(codeCacheBytes);
         long stackKb = stackBytesPerThread / 1024;
 
         StringBuilder sb = new StringBuilder(256);
         sb.append("-Xms").append(heapMb).append("m");
-        sb.append(" -Xmx").append(heapMb).append("m");
+        sb.append("-Xmx").append(heapMb).append("m");
         sb.append(" -XX:MaxMetaspaceSize=").append(metaMb).append("m");
         sb.append(" -XX:ReservedCodeCacheSize=").append(ccMb).append("m");
-        sb.append(" -XX:MaxDirectMemorySize=").append(dmMb).append("m");
         sb.append(" -Xss").append(stackKb).append("k");
-        sb.append(" -XX:+AlwaysPreTouch");
-        appendCommonOptions(sb, heapBytes);
         return sb.toString();
-    }
-
-    private void appendCommonOptions(StringBuilder sb, long heapBytes) {
-        boolean usesZgc = heapBytes >= GC_FLIP_HEAP_BYTES;
-        if (usesZgc) {
-            sb.append(" -XX:+UseZGC");
-            // JEP 439 (JDK 21) added generational ZGC as an experimental opt-in; JEP 474 (JDK 23)
-            // made it the default and deprecated the flag (a warning is printed if it is set
-            // explicitly); JEP 490 (JDK 24) obsoletes it further, and later releases stop
-            // recognizing it altogether, causing the JVM to refuse to start. So the flag is only
-            // useful on 21/22.
-            if (jdkVersion.feature() >= 21 && jdkVersion.feature() < 23) {
-                sb.append(" -XX:+ZGenerational");
-            }
-        } else {
-            sb.append(" -XX:+UseG1GC");
-        }
-        // G1 has supported string deduplication since JDK 8u20 (JEP 192); ZGC only gained support
-        // in JDK 18. Setting it with ZGC on an older JDK is not fatal, but the JVM disables it with
-        // a startup warning ("String Deduplication disabled: not supported by selected GC"), so skip
-        // it there rather than emit a flag that silently does nothing.
-        if (!usesZgc || jdkVersion.feature() >= 18) {
-            sb.append(" -XX:+UseStringDeduplication");
-        }
-        if (jdkVersion.feature() >= 25) {
-            sb.append(" -XX:+UseCompactObjectHeaders");
-        }
-        sb.append(" -XX:+ExitOnOutOfMemoryError");
-        sb.append(" -XX:+HeapDumpOnOutOfMemoryError");
-        sb.append(" -XX:HeapDumpPath=/tmp");
-    }
-
-    /**
-     * Indirection over {@link Runtime#version()} so tests can pin the feature
-     * version and verify JDK-gated options (e.g. {@code UseCompactObjectHeaders}
-     * which became a product flag in JDK 25 / JEP 519 and is rejected on
-     * earlier JDKs).
-     */
-    @FunctionalInterface
-    interface JdkVersion {
-        static JdkVersion current() {
-            return () -> Runtime.version().feature();
-        }
-
-        int feature();
     }
 }
