@@ -3,16 +3,13 @@ package io.github.jdubois.bootui.engine.memory;
 import io.github.jdubois.bootui.core.dto.KubernetesMemoryRecommendationDto;
 import io.github.jdubois.bootui.core.dto.MemoryCalculationDto;
 import io.github.jdubois.bootui.spi.HealthProbeManifest;
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Locale;
 
 final class MemoryKubernetesSizer {
 
-    static final int RECOMMENDED_MIN_HEADROOM_PERCENT = 10;
-    static final int RECOMMENDED_MAX_HEADROOM_PERCENT = 15;
-    static final double MAX_HEAP_PERCENTAGE = 75.0;
-    static final double RECOMMENDED_MIN_HEAP_PERCENTAGE = 65.0;
+    static final int DEFAULT_HEADROOM_PERCENT = 10;
 
     private static final long MB = 1024L * 1024L;
     private static final long MIN_BURSTABLE_REQUEST_BYTES = 128L * MB;
@@ -29,6 +26,7 @@ final class MemoryKubernetesSizer {
             long directBufferMemoryUsedBytes,
             boolean nativeMemoryTrackingEnabled,
             Long detectedContainerLimitBytes,
+            Long detectedContainerCurrentUsageBytes,
             double maxRamPercentage,
             double initialRamPercentage,
             String javaToolOptions,
@@ -37,7 +35,10 @@ final class MemoryKubernetesSizer {
             HealthProbeManifest healthProbeManifest) {
 
         long currentSnapshotBytes = estimateCurrentSnapshotBytes(
-                calculation, heapCommittedBytes, nonHeapCommittedBytes, directBufferMemoryUsedBytes);
+                heapCommittedBytes,
+                nonHeapCommittedBytes,
+                directBufferMemoryUsedBytes,
+                detectedContainerCurrentUsageBytes);
         String detectedContainerLimitMemory =
                 detectedContainerLimitBytes == null ? null : formatMi(detectedContainerLimitBytes);
 
@@ -73,15 +74,14 @@ final class MemoryKubernetesSizer {
                 calculation,
                 nativeMemoryTrackingEnabled,
                 detectedContainerLimitBytes,
+                detectedContainerCurrentUsageBytes,
                 burstableRequestBytes,
                 limitBytes,
-                maxRamPercentage,
-                javaToolOptions,
                 burstableEnabled,
                 healthProbesEnabled,
                 healthProbeManifest);
-        String confidence = confidence(calculation, nativeMemoryTrackingEnabled, detectedContainerLimitBytes);
-        String qosClass = requestBytes < limitBytes ? "Burstable" : "Guaranteed";
+        String confidence = confidence(calculation, detectedContainerLimitBytes, detectedContainerCurrentUsageBytes);
+        String qosClass = requestBytes < limitBytes ? "Burstable" : "Depends on CPU";
         String yaml = buildYaml(
                 formatMi(requestBytes),
                 formatMi(limitBytes),
@@ -116,26 +116,34 @@ final class MemoryKubernetesSizer {
             return 0;
         }
         double calculated = calculation.heapBytes() * 100.0 / calculation.totalMemoryBytes();
-        return Math.max(1.0, Math.min(MAX_HEAP_PERCENTAGE, calculated));
+        double floored = Math.floor(calculated * 1000.0) / 1000.0;
+        return floored > 0 ? floored : calculated;
     }
 
     private static long estimateCurrentSnapshotBytes(
-            MemoryCalculationDto calculation,
             long heapCommittedBytes,
             long nonHeapCommittedBytes,
-            long directBufferMemoryUsedBytes) {
+            long directBufferMemoryUsedBytes,
+            Long detectedContainerCurrentUsageBytes) {
 
-        long liveStackBytes = calculation.stackBytesPerThread() * Math.max(0L, calculation.liveThreadCount());
-        return nonNegative(heapCommittedBytes)
-                + nonNegative(nonHeapCommittedBytes)
-                + nonNegative(directBufferMemoryUsedBytes)
-                + liveStackBytes;
+        if (detectedContainerCurrentUsageBytes != null) {
+            return nonNegative(detectedContainerCurrentUsageBytes);
+        }
+        long committedPools = saturatedAdd(nonNegative(heapCommittedBytes), nonNegative(nonHeapCommittedBytes));
+        return saturatedAdd(committedPools, nonNegative(directBufferMemoryUsedBytes));
     }
 
     private static long estimateBurstableRequestBytes(long limitBytes, long currentSnapshotBytes) {
         long marginBytes =
                 Math.max(MIN_SNAPSHOT_MARGIN_BYTES, Math.round(currentSnapshotBytes * SNAPSHOT_MARGIN_FACTOR));
-        long rounded = roundUpTo(Math.max(MIN_BURSTABLE_REQUEST_BYTES, currentSnapshotBytes + marginBytes));
+        long snapshotWithMargin = currentSnapshotBytes > Long.MAX_VALUE - marginBytes
+                ? Long.MAX_VALUE
+                : currentSnapshotBytes + marginBytes;
+        long requestWithFloor = Math.max(MIN_BURSTABLE_REQUEST_BYTES, snapshotWithMargin);
+        if (requestWithFloor >= limitBytes) {
+            return limitBytes;
+        }
+        long rounded = roundUpTo(requestWithFloor);
         return Math.min(limitBytes, rounded);
     }
 
@@ -143,28 +151,38 @@ final class MemoryKubernetesSizer {
             MemoryCalculationDto calculation,
             boolean nativeMemoryTrackingEnabled,
             Long detectedContainerLimitBytes,
+            Long detectedContainerCurrentUsageBytes,
             long burstableRequestBytes,
             long limitBytes,
-            double maxRamPercentage,
-            String javaToolOptions,
             boolean burstableEnabled,
             boolean healthProbesEnabled,
             HealthProbeManifest healthProbeManifest) {
 
         List<String> warnings = new ArrayList<>();
-        warnings.add(garbageCollectorWarning(javaToolOptions));
-        if (burstableEnabled) {
+        boolean memoryRequestBelowLimit = burstableEnabled && burstableRequestBytes < limitBytes;
+        if (memoryRequestBelowLimit) {
             warnings.add(
-                    "Burstable mode lowers requests.memory below limits.memory; use it only in clusters that intentionally overcommit memory.");
+                    "Because requests.memory is below limits.memory, this container prevents the Pod from receiving Guaranteed QoS.");
         } else {
             warnings.add(
-                    "Request equals limit for Kubernetes Guaranteed QoS; enable burstable mode only in clusters that intentionally overcommit memory.");
+                    "Memory request equals memory limit. Kubernetes Guaranteed QoS additionally requires equal, non-zero CPU request and limit for every container in the Pod.");
+            if (burstableEnabled) {
+                warnings.add(
+                        "Burstable mode did not lower requests.memory because the current snapshot plus its safety margin reaches the selected limit.");
+            }
         }
         if (!healthProbesEnabled) {
             warnings.add(healthProbeManifest.probesOmittedWarning());
+        } else {
+            warnings.add(
+                    "Health probes use the framework's default paths and the named container port \"http\"; verify both against custom application or management-server settings.");
         }
         warnings.add(
-                "JAVA_TOOL_OPTIONS uses MaxRAMPercentage/InitialRAMPercentage so the heap follows the container memory limit; fixed metaspace, code cache, direct memory, and stack caps must still fit if you shrink the pod.");
+                "JAVA_TOOL_OPTIONS uses MaxRAMPercentage, MinRAMPercentage, and InitialRAMPercentage so HotSpot follows the container limit across small and regular heaps. Metaspace, code cache, and thread-stack caps remain fixed.");
+        warnings.add(
+                "Direct memory is modeled at "
+                        + formatMi(calculation.directMemoryBytes())
+                        + " from the 10 MiB fallback and current direct-buffer usage, but is intentionally not hard-capped; validate Netty/NIO demand under representative load.");
         if (detectedContainerLimitBytes != null && detectedContainerLimitBytes.longValue() != limitBytes) {
             warnings.add("Detected cgroup memory limit is "
                     + formatMi(detectedContainerLimitBytes)
@@ -172,66 +190,41 @@ final class MemoryKubernetesSizer {
                     + formatMi(limitBytes)
                     + "; update the total memory input if you want the manifest to match the live container limit.");
         }
-        if (calculation.headRoomPercent() < RECOMMENDED_MIN_HEADROOM_PERCENT) {
-            warnings.add("Headroom below "
-                    + RECOMMENDED_MIN_HEADROOM_PERCENT
-                    + "% leaves little room for native allocations; Kubernetes deployments usually start at "
-                    + RECOMMENDED_MIN_HEADROOM_PERCENT
-                    + "-"
-                    + RECOMMENDED_MAX_HEADROOM_PERCENT
-                    + "% unless measured otherwise.");
-        }
         if (!nativeMemoryTrackingEnabled) {
+            warnings.add("Native Memory Tracking is not enabled; this model cannot attribute all native JVM memory.");
+        } else {
             warnings.add(
-                    "Native Memory Tracking is not enabled, so native overhead is estimated from JVM pools and runtime defaults.");
+                    "Native Memory Tracking is enabled, but BootUI does not consume its output; confidence remains model-based.");
         }
         if (calculation.threadCount() < calculation.liveThreadCount()) {
             warnings.add(
                     "Thread budget is below the current live thread count; increase it before applying these limits.");
         }
-        double calculatedHeapPercentage = calculation.heapBytes() * 100.0 / limitBytes;
-        if (calculatedHeapPercentage > MAX_HEAP_PERCENTAGE) {
-            warnings.add("Kubernetes heap sizing is capped at "
-                    + formatPercentage(MAX_HEAP_PERCENTAGE)
-                    + "% of the container limit to leave room for native memory.");
-        } else if (maxRamPercentage < RECOMMENDED_MIN_HEAP_PERCENTAGE) {
-            warnings.add(
-                    "Heap is "
-                            + formatPercentage(maxRamPercentage)
-                            + "% of the container limit because fixed non-heap and thread-stack reservations are high for this memory size.");
-        }
         if (burstableRequestBytes < limitBytes) {
-            warnings.add(
-                    "The burstable request is based on the current committed-memory snapshot and can be too low after warmup.");
+            if (detectedContainerCurrentUsageBytes != null) {
+                warnings.add(
+                        "The burstable request starts from the current cgroup memory.current snapshot and can still be too low after warmup or a workload change.");
+            } else {
+                warnings.add(
+                        "cgroup memory.current is unavailable, so the burstable request falls back to committed JVM pools plus observed direct buffers and can be too low after warmup.");
+            }
         }
         return warnings;
     }
 
-    private static String garbageCollectorWarning(String javaToolOptions) {
-        if (javaToolOptions != null && javaToolOptions.contains("-XX:+UseZGC")) {
-            String mode = javaToolOptions.contains("-XX:+ZGenerational") ? " with generational mode" : "";
-            return "Garbage collector: ZGC"
-                    + mode
-                    + " is selected for calculated heaps of 4 GiB or more to prioritize low pause times.";
-        }
-        if (javaToolOptions != null && javaToolOptions.contains("-XX:+UseG1GC")) {
-            return "Garbage collector: G1GC is selected for calculated heaps below 4 GiB; the advisor switches to ZGC for larger heaps.";
-        }
-        return "Garbage collector: unavailable until the JVM options can be calculated.";
-    }
-
     private static String confidence(
-            MemoryCalculationDto calculation, boolean nativeMemoryTrackingEnabled, Long detectedContainerLimitBytes) {
+            MemoryCalculationDto calculation,
+            Long detectedContainerLimitBytes,
+            Long detectedContainerCurrentUsageBytes) {
         if (!calculation.valid()) {
             return "Low";
         }
         if (detectedContainerLimitBytes != null
                 && detectedContainerLimitBytes.longValue() == calculation.totalMemoryBytes()
-                && nativeMemoryTrackingEnabled
-                && calculation.headRoomPercent() >= RECOMMENDED_MIN_HEADROOM_PERCENT) {
-            return "High";
+                && detectedContainerCurrentUsageBytes != null) {
+            return "Medium";
         }
-        return "Medium";
+        return "Low";
     }
 
     private static String buildYaml(
@@ -240,7 +233,6 @@ final class MemoryKubernetesSizer {
             String javaToolOptions,
             boolean healthProbesEnabled,
             HealthProbeManifest healthProbeManifest) {
-        String escapedJvmOptions = javaToolOptions.replace("\\", "\\\\").replace("\"", "\\\"");
         StringBuilder yaml = new StringBuilder(512);
         yaml.append("resources:\n")
                 .append("  requests:\n")
@@ -255,7 +247,7 @@ final class MemoryKubernetesSizer {
                 .append("  - name: JAVA_TOOL_OPTIONS\n")
                 .append("    value: >-\n")
                 .append("      ")
-                .append(escapedJvmOptions);
+                .append(javaToolOptions);
         if (healthProbesEnabled) {
             // Terminate the JAVA_TOOL_OPTIONS value line before the (optional) enabling env entry or the
             // probe stanzas, so frameworks without an enabling env var (e.g. Quarkus) still yield valid YAML.
@@ -272,7 +264,7 @@ final class MemoryKubernetesSizer {
                     .append("    path: ")
                     .append(healthProbeManifest.startupPath())
                     .append("\n")
-                    .append("    port: 8080\n")
+                    .append("    port: http\n")
                     .append("  failureThreshold: 30\n")
                     .append("  periodSeconds: 10\n")
                     .append("readinessProbe:\n")
@@ -280,7 +272,7 @@ final class MemoryKubernetesSizer {
                     .append("    path: ")
                     .append(healthProbeManifest.readinessPath())
                     .append("\n")
-                    .append("    port: 8080\n")
+                    .append("    port: http\n")
                     .append("  periodSeconds: 10\n")
                     .append("  timeoutSeconds: 5\n")
                     .append("  failureThreshold: 3\n")
@@ -289,7 +281,7 @@ final class MemoryKubernetesSizer {
                     .append("    path: ")
                     .append(healthProbeManifest.livenessPath())
                     .append("\n")
-                    .append("    port: 8080\n")
+                    .append("    port: http\n")
                     .append("  periodSeconds: 15\n")
                     .append("  timeoutSeconds: 5\n")
                     .append("  failureThreshold: 3");
@@ -299,6 +291,10 @@ final class MemoryKubernetesSizer {
 
     private static long nonNegative(long value) {
         return Math.max(0, value);
+    }
+
+    private static long saturatedAdd(long left, long right) {
+        return left > Long.MAX_VALUE - right ? Long.MAX_VALUE : left + right;
     }
 
     private static long roundUpTo(long value) {
@@ -314,6 +310,6 @@ final class MemoryKubernetesSizer {
     }
 
     private static String formatPercentage(double percentage) {
-        return String.format(Locale.ROOT, "%.1f", percentage);
+        return BigDecimal.valueOf(percentage).stripTrailingZeros().toPlainString();
     }
 }
